--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
 </head>
 
 <body>
-  <h1>Tarefas</h1>
+  <h1>Energia como moeda de troca</h1>
   
   <input id='addTodoTextInput' type='text'>
-  <button onclick='handler.addTodo()'>Adicionar Tarefa</button>
+  <button onclick='handler.addTodo()'>Sou Usuário</button>
 
+  <input id='addTodoTextInput' type='text'>
+  <button onclick='handler.addTodo()'>Sou Investidor</button>
   
   <div>
-  Posição da Tarefa <input id='changeTodoPositionInput' type='number'>
+  Posição <input id='changeTodoPositionInput' type='number'>
   Nova Tarefa<input id='changeTodoTextInput' type='text'>
-  <button onclick='handler.changeTodo()'>Alterar Tarefa</button>
+  <button onclick='handler.changeTodo()'>Alterar</button>
   </div>
   
   <div>
-  Posição da Tarefa<input id='deleteTodoPositionInput' type='number'>
-  <button onclick='handler.deleteTodo()'>Deletar Tarefa</button>
+  Posição<input id='deleteTodoPositionInput' type='number'>
+  <button onclick='handler.deleteTodo()'>Deletar</button>
   </div>
   
   <div>
   Posição da Tarefa<input id='toggleCompletedPositionInput' type='number'>
-  <button onclick='handler.toggleCompleted()'>Marcar como Completada</button>
+  <button onclick='handler.toggleCompleted()'>Marcar como Completa</button>
   </div>
   
   <ul>
