--- a/index.html
+++ b/index.html
@@ -15,26 +15,11 @@
   <input id='addTodoTextInput' type='text'>
   <button onclick='handler.addTodo()'>Sou Investidor</button>
   
-  <div>
-  Posição <input id='changeTodoPositionInput' type='number'>
-  Nova Tarefa<input id='changeTodoTextInput' type='text'>
-  <button onclick='handler.changeTodo()'>Alterar</button>
-  </div>
-  
-  <div>
-  Posição<input id='deleteTodoPositionInput' type='number'>
-  <button onclick='handler.deleteTodo()'>Deletar</button>
-  </div>
-  
-  <div>
-  Posição da Tarefa<input id='toggleCompletedPositionInput' type='number'>
-  <button onclick='handler.toggleCompleted()'>Marcar como Completa</button>
-  </div>
-  
+
   <ul>
   </ul>
   
-  Slider inútil
+  Energia
   <div id="slidecontainer">
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
   </div>
