--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <input id='addTodoTextInput' type='text'>
   <button onclick='handler.addTodo()'>Sou Investidor</button>
   
+  </div>
+  <a location.href="investidor.html"><button type="button">Sou Investidor</button></a>
+  </div>
 
   <ul>
   </ul>
