--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 <body>
   <h1>Energia como moeda de troca</h1>
   
-  <input id='addTodoTextInput' type='text'>
-  <button onclick='handler.addTodo()'>Sou Usuário</button>
+  </div>
+  <a location.href="usuario.html"><button type="button">Sou Usuário</button></a>
+  </div>
 
-  <input id='addTodoTextInput' type='text'>
-  <button onclick='handler.addTodo()'>Sou Investidor</button>
-  
   </div>
   <a location.href="investidor.html"><button type="button">Sou Investidor</button></a>
   </div>
