--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   </div>
-  <a location.href="investidor.html"><button type="button">Sou Investidor</button></a>
+  <button onclick="window.location.href='investidor.html';" type="button">Sou Investidor</button></a>
   </div>
 
   <ul>
