--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <h1>Energia como moeda de troca</h1>
   
+
   </div>
-  <a location.href="usuario.html"><button type="button">Sou Usuário</button></a>
+  <button onclick="window.location.href='usuario.html';" type="button">Sou Usuário</button></a>
   </div>
 
   </div>
