--- a/usuario.html
+++ b/usuario.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-  <h1>Energia como moeda de troca</h1>
+  <h1>Bem Vindo</h1>
   
-  </div>
-  <a location.href="usuario.html"><button type="button">Sou Usuário</button></a>
-  </div>
-
+  <h2>Estabelecimentos Favoritos:<h2/>
+  <l>Subway R. 25 de Março, 22 - <l/>
+  <l>Shell Av. Paulista, 420<l/>
 
   <ul>
   </ul>
