--- a/usuario.html
+++ b/usuario.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Bem Vindo</h1>
   
-  <h2>Estabelecimentos Favoritos:<h2/>
+  <p>Estabelecimentos Favoritos:<p/>
     
   <div>
   <p>Subway R. 25 de Março, 22 <p/>
