--- a/investidor.html
+++ b/investidor.html
@@ -21,8 +21,21 @@
   <p> Créditos disponíveis no mês: 5.345 kWh <p/>
   </div>
  
+  </div>
+  <button onclick="window.location.href='novoGerador.html';" type="button">Comprar Nova Cota</button></a>
+  </div>
 
+  </div>
+  <button onclick="window.location.href='venderGerador.html';" type="button">Vender Cota</button></a>
+  </div>
+
+  </div>
+  <button onclick="window.location.href='alterarGerador.html';" type="button">Alterar Cota</button></a>
+  </div>
   
+  </div>
+  <button onclick="window.location.href='indicar.html';" type="button">Indique para Amigo</button></a>
+  </div>
   
   
   <script src="script.js"></script>
