--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
   <button onclick="window.location.href='investidor.html';" type="button">Sou Investidor</button></a>
   </div>
 
+  </div>
+  <button onclick="window.location.href='estabelecimento.html';" type="button">Sou Fornecedor</button></a>
+  </div>
+
+
   <ul>
   </ul>
 
-  
+  Amplitude Ltda 
   
   <script src="script.js"></script>
 
