--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Energia como moeda de troca</h1>
+  <h1>Energia como Moeda de Troca</h1>
   
 
   </div>
@@ -26,8 +26,7 @@
   <ul>
   </ul>
 
-  Amplitude Ltda 
-  
+
   <script src="script.js"></script>
 
 </body>
